--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ a {
   text-decoration: none;
   display: block;
 }
+
 li {
   list-style: none;
 }
@@ -42,7 +43,7 @@ body {
   font-family: "Roboto";
 }
 .container {
-  width: 1300px;
+  width: 1230px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -88,6 +89,15 @@ body {
 .contacts a {
   color: var(--primary-text-color);
 }
+
+.contacts a:hover,
+.main-nav a:hover,
+.contacts-footer a:hover,
+.contacts a:focus,
+.main-nav a:focus,
+.contacts-footer a:focus {
+  color: var(--button-link-color);
+}
 .main-nav {
   display: flex;
 }
@@ -114,7 +124,22 @@ body {
 }
 
 /*Hero*/
-
+.container-hero {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 696px;
+}
+.hero {
+  background-color: var(--futter-hero-bgc);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../images/Img\ 2.jpg");
+  background-size: cover;
+}
 .hero-title {
   color: var(--main-text-color);
   font-style: normal;
@@ -127,7 +152,7 @@ body {
 }
 .hero .container {
   padding-top: 200px;
-  padding-bottom: 280px;
+  padding-bottom: 200px;
   text-align: center;
 }
 
@@ -156,6 +181,24 @@ h3 {
 }
 
 /*future*/
+.icons-for-futue {
+  display: flex;
+  padding-left: 0;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.future-icons {
+  margin-bottom: 30px;
+  box-sizing: content-box;
+  width: 270px;
+  height: 120px;
+  background-color: var(--section-bgc);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
@@ -236,7 +279,7 @@ h3 {
 }
 .command {
   padding-top: 30px;
-  padding-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .name {
@@ -249,6 +292,97 @@ h3 {
   line-height: 1.18;
   text-align: center;
 }
+.social-link-item,
+.social-link-list {
+  display: flex;
+}
+.social-link-item {
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+.social-link {
+  display: block;
+}
+.social-link-svg {
+  padding: 12px;
+
+  fill: #afb1b8;
+}
+.social-link:hover .social-link-svg {
+  fill: #ffffff;
+}
+.social-link:focus .social-link-svg {
+  fill: #ffffff;
+}
+
+.cocial-svg {
+  fill: #afb1b8;
+}
+.cocial-svg:hover,
+.cocial-svg:focus {
+  fill: var(--main-text-color);
+  background-color: var(--button-link-color);
+
+  border-radius: 50%;
+
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.social-link-list {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 0px;
+  margin-bottom: 30px;
+
+  margin-left: auto;
+  margin-right: auto;
+  width: 206px;
+}
+
+/* Постоянные клиенты */
+.section .container {
+  padding-bottom: 94px;
+}
+.clients-list-item {
+  border: 1px solid #afb1b8;
+  box-sizing: content-box;
+  width: 170px;
+  height: 90px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.clients-list {
+  display: flex;
+  padding-left: 0;
+  justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.tittle-clients {
+  margin-top: 94px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-size: 36px;
+  line-height: 42px;
+
+  letter-spacing: 0.03em;
+}
+.clients-list-item:hover {
+  border-color: var(--button-link-color);
+}
+.clients-list-link-svg {
+  fill: #afb1b8;
+}
+
+.clients-list-link:hover .clients-list-link-svg,
+.clients-list-link:focus .clients-list-link-svg {
+  fill: var(--button-link-color);
+}
 
 /*footer*/
 footer .container {
@@ -258,8 +392,7 @@ footer .container {
 .footer-logo {
   display: inline-block;
 }
-footer,
-.hero {
+footer {
   background-color: var(--futter-hero-bgc);
 }
 
@@ -297,6 +430,41 @@ footer .logotyp span {
   margin-top: 0;
 }
 
+.social-footer-svg {
+  fill: var(--primary-bgr);
+}
+.footer-one {
+  display: block;
+  margin-right: 0;
+  height: 200;
+}
+.footer-two {
+  display: block;
+}
+.footer-list {
+  display: contents;
+  justify-content: center;
+  padding-left: 0;
+  margin-top: 20px;
+  margin-bottom: 0;
+}
+.footer-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-list-item {
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  background-position: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer-list-item.instagram:hover,
+.footer-list-item.twitter:hover,
+.footer-list-item.facebook:hover,
+.footer-list-item.linkedin:hover {
+  background-color: var(--button-link-color);
+}
 /*portfolio*/
 .portfolio {
   border-bottom: 1px solid #ececec;
@@ -343,6 +511,18 @@ footer .logotyp span {
   flex-basis: calc(100% / 3 - 60px);
   border: 1px solid #eeeeee;
 }
+.work-link:hover,
+.work-link:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+.work-link:nth-child(3n) {
+  margin-right: 0;
+}
+.work-link:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
 .work-expirience {
   margin-bottom: -30px;
   margin-right: -30px;
@@ -373,15 +553,16 @@ footer .logotyp span {
   padding-bottom: 30px;
   padding-left: 24px;
 }
-}
-.navigation a:hover,
-.contacts a:hover,
-.navigation a:focus,
-.contacts a:focus {
-  color: var(--button-link-color);
-}
 
 .work-expirience:hover,
 .work-expirience:focus {
   color: var(--main-text-color);
+}
+
+.nbn {
+  display: inline;
+  padding-right: 10px;
+}
+.icon-heder {
+  fill: currentColor;
 }
